@@ -1,3 +1,7 @@
+2010-06-03  Romain Francois <romain@r-enthusiasts.com>
+
+	* src/RcppCommn.cpp: added show method for C++Object and C++Class
+
 2010-06-02  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/Rcpp/traits/r_type_traits.h: added missing support for
